# rs-key-mapping

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT.txt  README.md  build.rs
.github/workflows/: publish.yml
src/: key_codes.json  lib.rs
