[package]
name = "key-mapping"
version = "0.1.0"
edition = "2021"

[dependencies]
phf = { version = "0.11", default-features = false }
serde = { version = "1.0", default-features = false, features = [ "derive" ], optional = true }

[features]
default = [ "std" ]
std = []

[build-dependencies]
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
phf_codegen = "0.11"
