[package]
name = "key-mapping"
version = "0.3.0"
edition = "2021"
rust-version = "1.77.0"
license = "MIT OR Apache-2.0"
description = "Library allowing for keyboard key code conversion between systems such as the DOM and HID usage-ids"
readme = "README.md"
homepage = "https://github.com/enchant97/rs-key-mapping"
repository = "https://github.com/enchant97/rs-key-mapping"
keywords = [ "keyboard", "layouts", "hid", "mappings" ]
categories = [ "no-std", "no-std::no-alloc", "encoding" ]

[dependencies]
phf = { version = "0.11", default-features = false }
serde = { version = "1.0", default-features = false, features = [ "derive" ], optional = true }
usbd-hid = { version = "0.7", optional = true }

[features]
default = [ "std" ]
std = []

[build-dependencies]
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
phf_codegen = "0.11"
hex = "0.4.3"
