[package]
name = "key-mapping"
version = "0.7.0"
edition = "2024"
rust-version = "1.92.0"
license = "MIT OR Apache-2.0"
description = "Library allowing for keyboard key code conversion between systems such as the DOM and HID usage-ids"
readme = "README.md"
homepage = "https://github.com/enchant97/rs-key-mapping"
repository = "https://github.com/enchant97/rs-key-mapping"
keywords = [ "keyboard", "layouts", "hid", "mappings" ]
categories = [ "no-std", "no-std::no-alloc", "encoding" ]

[dependencies]
phf = { version = "0.13", default-features = false }
serde = { version = "1.0", default-features = false, features = [ "derive" ], optional = true }
serde_arrays = { version = "0.2", optional = true }
defmt = { version = "1.1", optional = true }
usbd-hid = { version = "0.10", optional = true }
embassy-usb-host = { version = "0.1", optional = true }

[features]
default = [ "std" ]
std = []
serde = ["dep:serde", "dep:serde_arrays"]

[build-dependencies]
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
phf_codegen = "0.13"
hex = "0.4"
